@@ -260,6 +260,9 @@ Optimizations
 * LUCENE-5721: Monotonic compression doesn't use zig-zag encoding anymore.
   (Robert Muir, Adrien Grand)
 
+* LUCENE-5750: Speed up monotonic addressing for BINARY and SORTED_SET 
+  docvalues. (Robert Muir)
+
 Bug fixes
 
 * LUCENE-5738: Ensure NativeFSLock prevents opening the file channel for the
